--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 .inputs .location input {
   max-width: 300px;
+  min-width: 200px;
   width: 25%;
   height: 2rem;
   padding: 0.5rem;
@@ -57,6 +58,16 @@ h1, h2, h3, h4, h5, h6, p {
 .content {
   height: 90%;
 }
+.content h3 {
+  color: rgb(253, 190, 0);
+  font-size: 1.5rem;
+}
+.content #three-day-forecast__max-temp3,
+.content #three-day-forecast__max-temp2,
+.content #three-day-forecast__max-temp1 {
+  font-size: 2.25rem;
+  font-weight: 700;
+}
 .content .current-forecast {
   width: inherit;
   height: 30%;
@@ -70,7 +81,7 @@ h1, h2, h3, h4, h5, h6, p {
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding-top: 2.25rem;
+  padding-top: 1.25rem;
   align-items: center;
 }
 .content .current-forecast__temp p {
@@ -79,11 +90,11 @@ h1, h2, h3, h4, h5, h6, p {
 }
 .content .current-forecast__temp #currTemp {
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 4rem;
 }
 .content .current-forecast__conditions {
   color: darkcyan;
-  padding-top: 2.25rem;
+  padding-top: 1.25rem;
   width: 50%;
   font-size: 1.5rem;
   height: 100%;
@@ -102,7 +113,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .three-day-forecast {
   width: inherit;
-  height: 65%;
+  min-height: 65%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -112,12 +123,45 @@ h1, h2, h3, h4, h5, h6, p {
   width: 30%;
   background-color: darkcyan;
   padding: 1rem;
+  margin-bottom: 1rem;
+}
+.three-day-forecast__day .tdf-stat-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  padding-right: 1rem;
 }
 .three-day-forecast__day h2 {
   font-size: 2rem;
   color: white;
   text-align: center;
   text-decoration: underline;
+}
+
+@media screen and (max-width: 1200px) {
+  .content {
+    flex-direction: column;
+  }
+  .three-day-forecast {
+    flex-direction: column;
+  }
+  .three-day-forecast__day {
+    width: 95%;
+    height: auto;
+  }
+  .current-forecast {
+    flex-direction: column;
+    width: 100%;
+    min-height: 40%;
+  }
+  .current-forecast__temp {
+    min-width: 100%;
+    height: auto;
+  }
+  .current-forecast__conditions {
+    min-width: 100%;
+    min-height: auto;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
