--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,6 +34,7 @@ h1, h2, h3, h4, h5, h6, p {
         }
         input {
             max-width: 300px;
+            min-width: 200px;
             width: 25%;
             height: 2rem;
             padding: .5rem;
@@ -58,6 +59,17 @@ h1, h2, h3, h4, h5, h6, p {
 
 .content {
     height: 90%;
+    h3 {
+        color: rgb(253, 190, 0);
+        font-size: 1.5rem;
+    }
+    #three-day-forecast__max-temp3,
+    #three-day-forecast__max-temp2,
+    #three-day-forecast__max-temp1 
+    {
+        font-size: 2.25rem;
+        font-weight: 700;
+    }
     .current-forecast {
         width: inherit;
         height: 30%;
@@ -71,7 +83,7 @@ h1, h2, h3, h4, h5, h6, p {
             height: 100%;
             display: flex;
             flex-direction: column;
-            padding-top: 2.25rem;
+            padding-top: 1.25rem;
           
             align-items: center;
             p {
@@ -80,13 +92,13 @@ h1, h2, h3, h4, h5, h6, p {
             }
             #currTemp {
                 font-weight: 700;
-                font-size: 2.5rem;
+                font-size: 4rem;
             }
         }
 
         &__conditions {
             color: darkcyan;
-            padding-top: 2.25rem;
+            padding-top: 1.25rem;
             width: 50%;
             font-size: 1.5rem;
             height: 100%;
@@ -110,9 +122,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 .three-day-forecast {
     width: inherit;
-    height: 65%;
+    min-height: 65%;
     // border: 1px solid black;
-
+    
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -122,15 +134,48 @@ h1, h2, h3, h4, h5, h6, p {
         width: 30%;
         background-color: darkcyan;
         padding: 1rem;
-        
+        margin-bottom: 1rem;
+        .tdf-stat-wrapper {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+            padding-right: 1rem;
+        } 
         h2 {
             font-size: 2rem;
             color: white;
             text-align: center;
-          
             text-decoration: underline;
         }
     }
-}
 
+    
+}
+@media screen and (max-width: 1200px) {
+    .content {
+        flex-direction: column;
+    }
+    .three-day-forecast {
+        flex-direction: column;
+        &__day { 
+            width: 95%;
+            height: auto;
+        }
+    }
+    .current-forecast { 
+        flex-direction: column;
+        width: 100%;
+        min-height: 40%;
+
+        &__temp { 
+            min-width: 100%;
+            height: auto;
+        }
+        &__conditions { 
+            min-width: 100%;
+            min-height: auto;
+        }
+    }
+
+}
 
