--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,26 @@ h1, h2, h3, h4, h5, h6, p {
   margin-bottom: 16px;
 }
 
+#login {
+  background-color: darkcyan;
+  border: none;
+  border-radius: 3px;
+  color: white;
+  padding: 4px 8px;
+  margin-left: 8px;
+  margin-top: 8px;
+}
+
+#login:hover {
+  background-color: rgb(253, 190, 0);
+}
+
 .inputs {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding-top: 2rem;
+  padding-top: 1rem;
 }
 .inputs .location {
   width: 100%;
@@ -47,6 +61,9 @@ h1, h2, h3, h4, h5, h6, p {
   border: none;
   border-radius: 3px;
   color: white;
+}
+.inputs .location button:hover {
+  background-color: rgb(253, 190, 0);
 }
 
 #submit {
@@ -81,7 +98,7 @@ h1, h2, h3, h4, h5, h6, p {
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding-top: 1.25rem;
+  padding-top: 0.5rem;
   align-items: center;
 }
 .content .current-forecast__temp p {
@@ -94,7 +111,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 .content .current-forecast__conditions {
   color: darkcyan;
-  padding-top: 1.25rem;
+  padding-top: 0.5rem;
   width: 50%;
   font-size: 1.5rem;
   height: 100%;
@@ -161,6 +178,7 @@ h1, h2, h3, h4, h5, h6, p {
   .current-forecast__conditions {
     min-width: 100%;
     min-height: auto;
+    margin-bottom: 2rem;
   }
 }
 
