--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,7 +5,7 @@
  box-sizing: border-box;
 }
 html, body {
- height: 100%;
+//  height: 100%;
  width: 100vw;
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  background-color: lightgray;
@@ -34,7 +34,6 @@ h1, h2, h3, h4, h5, h6, p {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding-top: 1rem;
     .location {
         width: 100%;
         display: flex;
@@ -100,7 +99,7 @@ h1, h2, h3, h4, h5, h6, p {
             height: 100%;
             display: flex;
             flex-direction: column;
-            padding-top: .5rem;
+            padding-top: .25rem;
           
             align-items: center;
             p {
@@ -115,7 +114,7 @@ h1, h2, h3, h4, h5, h6, p {
 
         &__conditions {
             color: darkcyan;
-            padding-top: .5rem;
+            padding-top: .25rem;
             width: 50%;
             font-size: 1.5rem;
             height: 100%;
